--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        
         </head>
         <body>
+          
 
             <div id='goal' style="font-size: 80px"></div>
             <div id='current-points' style="font-size: 80px"></div>
             <script type="text/javascript">
-            let red = 'redGem.jpg';
-            let blue = 'blueGem.jpg';
+            let red = "";
+            let blue = "../assets/images/";
             let green = 'greenGem.jpg';
             let yellow = 'purpleGem.jpg';
             let colors = [red, yellow, blue, green];
