--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div id='goal' style="font-size: 80px"></div>
             <div id='current-points' style="font-size: 80px"></div>
             <script type="text/javascript">
-            let red = "";
-            let blue = "../assets/images/";
-            let green = 'greenGem.jpg';
-            let yellow = 'purpleGem.jpg';
+            let red = url="assets/images/PurpleGem.gif";
+            let blue = url="assets/images/PurpleGem.gif";
+            let green =  url="assets/images/PurpleGem.gif";
+            let yellow = url="assets/images/HertGem.gif";
             let colors = [red, yellow, blue, green];
             let randomArray = [];
             let currentPoints = 0;
