--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <title>Crystal-Collector</title>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+            <link href="https://fonts.googleapis.com/css?family=Yeon+Sung" rel="stylesheet">
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         
         </head>
